--- a/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
+++ b/website_pinetwork_odoo/views/website_pinetwork_templates_pi_users.xml
@@ -1568,7 +1568,7 @@
                                 bottom: 10px;
                                 float: right;
                                 right: 10%;
-                                bottom: 10%;
+                                bottom: 60px;
                                 max-width: 50px;
                                 max-height: 50px;
                                 width: 100%;
@@ -1972,7 +1972,7 @@
                                 bottom: 10px;
                                 float: right;
                                 right: 10%;
-                                bottom: 10%;
+                                bottom: 60px;
                                 max-width: 50px;
                                 max-height: 50px;
                                 width: 100%;
@@ -2366,7 +2366,7 @@
                                 bottom: 10px;
                                 float: right;
                                 right: 10%;
-                                bottom: 10%;
+                                bottom: 60px;
                                 max-width: 50px;
                                 max-height: 50px;
                                 width: 100%;
