--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -629,7 +629,7 @@
                                     bottom: 10px;
                                     float: right;
                                     right: 10%;
-                                    bottom: 10%;
+                                    bottom: 60px;
                                     max-width: 50px;
                                     max-height: 50px;
                                     width: 100%;
