--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -168,7 +168,7 @@
                                     location.pathname.substring(0, 8) != "/es/web?")
                                 {
                                   new Darkmode({
-                                    bottom: '10%',
+                                    bottom: '60px',
                                     left: '10%',
                                     time: '0.5s',
                                     label: '🌓',
@@ -625,7 +625,7 @@
                                 location.pathname.substring(0, 8) != "/es/web?")
                             {
                                 new Darkmode({
-                                    bottom: '10%',
+                                    bottom: '60px',
                                     left: '10%',
                                     time: '0.5s',
                                     label: '🌓',
@@ -2867,7 +2867,7 @@
                                 position: fixed;
                                 float: right;
                                 right: 10%;
-                                bottom: 10%;
+                                bottom: 60px;
                                 max-width: 50px;
                                 max-height: 50px;
                                 width: 100%;
@@ -2890,7 +2890,7 @@
                                 position: fixed;
                                 float: right;
                                 right: 10%;
-                                bottom: 20%;
+                                bottom: 120px;
                                 max-width: 50px;
                                 max-height: 50px;
                                 width: 100%;
@@ -2913,7 +2913,7 @@
                                 position: fixed;
                                 float: left;
                                 left: 10%;
-                                bottom: 20%;
+                                bottom: 120px;
                                 max-width: 50px;
                                 max-height: 50px;
                                 width: 100%;
