--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -2105,17 +2105,17 @@
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a href="/chess" class="btn btn-outline-success font-weight-bold text-black border-success" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-chess-knight"></i></div><div style="font-size:100%;" translate="no">CHESS</div><div style="font-size:80%;">Worldwide Chess Championship</div><div style="font-size:80%;">Earn points</div><div style="font-size:80%;" >Game</div></a><button id="chessinfo" class="col-auto btn btn-sm btn-outline-info chessinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a href="/sudoku" class="btn btn-outline-success font-weight-bold text-black border-success" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-puzzle-piece"></i></div><div style="font-size:100%;" translate="no">SUDOKU</div><div style="font-size:80%;">Worldwide Sudoku Championship</div><div style="font-size:80%;">Earn points</div><div style="font-size:80%;" >Game</div></a><button id="sudokuinfo" class="col-auto btn btn-sm btn-outline-info sudokuinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a href="/snake" class="btn btn-outline-success font-weight-bold text-black border-success" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-staff-snake"></i></div><div style="font-size:100%;" translate="no">SNAKE</div><div style="font-size:80%;">Worldwide Snake Championship</div><div style="font-size:80%;">Earn points</div><div style="font-size:80%;" >Game</div></a><button id="snakeinfo" class="col-auto btn btn-sm btn-outline-info snakeinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
@@ -2132,67 +2132,67 @@
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-tetris" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="tetris" href="/tetris" class="btn btn-outline-success font-weight-bold text-black border-success tetris" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-cubes"></i></div><div style="font-size:100%;" translate="no">BLOCKRAIN</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div></a><button id="tetrisinfo" class="col-auto btn btn-sm btn-outline-info tetrisinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-mahjong" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="mahjong" href="/mahjong" class="btn btn-outline-success font-weight-bold text-black border-success mahjong" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-puzzle-piece"></i></div><div style="font-size:100%;" translate="no">MAHJONG</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div></a><button id="mahjonginfo" class="col-auto btn btn-sm btn-outline-info mahjonginfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-bubble-shooter" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="bubble-shooter" href="/bubble-shooter" class="btn btn-outline-success font-weight-bold text-black border-success bubble-shooter" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-soap"></i></div><div style="font-size:100%;" translate="no">BUBBLE SHOOTER</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div></a><button id="bubble-shooterinfo" class="col-auto btn btn-sm btn-outline-info bubble-shooterinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-test-your-brain" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="test-your-brain" href="/test-your-brain" class="btn btn-outline-success font-weight-bold text-black border-success test-your-brain" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-braille"></i></div><div style="font-size:100%;" translate="no">TEST YOUR BRAIN</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div></a><button id="test-your-braininfo" class="col-auto btn btn-sm btn-outline-info test-your-braininfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-15-puzzle" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="15-puzzle" href="/fifteen-puzzle" class="btn btn-outline-success font-weight-bold text-black border-success 15-puzzle" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-puzzle-piece"></i></div><div style="font-size:100%;" translate="no">15 PUZZLE GAME</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div><div style="font-size:80%;">Developed with Gemini AI</div></a><button id="15-puzzleinfo" class="col-auto btn btn-sm btn-outline-info 15-puzzleinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-pingpong" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="pingpong" href="/pingpong" class="btn btn-outline-success font-weight-bold text-black border-success pingpong" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-table-tennis-paddle-ball"></i></div><div style="font-size:100%;" translate="no">PINGPONG</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div><div style="font-size:80%;">Developed with Gemini AI</div></a><button id="pingponginfo" class="col-auto btn btn-sm btn-outline-info pingponginfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-checkers" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="checkers" href="/checkers" class="btn btn-outline-success font-weight-bold text-black border-success checkers" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-chess-board"></i></div><div style="font-size:100%;" translate="no">CHECKERS</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div><div style="font-size:80%;">Developed with Gemini AI</div></a><button id="checkersinfo" class="col-auto btn btn-sm btn-outline-info checkersinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-xiangqi" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="xiangqi" href="/xiangqi" class="btn btn-outline-success font-weight-bold text-black border-success xiangqi" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-chess-board"></i></div><div style="font-size:100%;" translate="no">XIANGQI (Chinese chess)</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div><div style="font-size:80%;">Developed with Gemini AI</div></a><button id="xiangqiinfo" class="col-auto btn btn-sm btn-outline-info xiangqiinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-domino" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="domino" href="/domino" class="btn btn-outline-success font-weight-bold text-black border-success domino" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-lines-leaning"></i></div><div style="font-size:100%;" translate="no">DOMINO</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div><div style="font-size:80%;">Developed with Gemini AI</div></a><button id="dominoinfo" class="col-auto btn btn-sm btn-outline-info dominoinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-latincrush" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="latincrush" href="/latincrush" class="btn btn-outline-success font-weight-bold text-black border-success latincrush" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-candy-cane"></i></div><div style="font-size:100%;" translate="no">LATIN CRUSH</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div><div style="font-size:80%;">Developed with Gemini AI</div></a><button id="latincrushinfo" class="col-auto btn btn-sm btn-outline-info latincrushinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-soccer-penalty" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="soccer-penalty" href="/soccer-penalty" class="btn btn-outline-success font-weight-bold text-black border-success soccer-penalty" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-futbol"></i></div><div style="font-size:100%;" translate="no">SOCCER PENALTY</div><div style="font-size:80%;">Minigame (you won't earn points from it, just for passing the time)</div><div style="font-size:80%;">Developed with Gemini AI</div></a><button id="soccer-penaltyinfo" class="col-auto btn btn-sm btn-outline-info soccer-penaltyinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
                                         <li class="list-group-item border-left-0 border-bottom border-right-0 border-top">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12" style="text-align: center"><div class="next-pi" style="display:inline;"><i class="fa-solid fa-building"></i></div> <div class="next-pi" style="display:inline; font-size: 18px">UTILITIES</div></div>
                                             </div>
                                         </li>
                                         <li class="search-apps-li list-group-item border-left-0 border-bottom border-right-0 border-top show-webtorrent" style="">
-                                            <div class="row" style="text-align: left;">
+                                            <div class="row" style="text-align: center;">
                                                 <div class="col-12"><a id="webtorrent" href="/webtorrent" class="btn btn-outline-success font-weight-bold text-black border-success webtorrent" style="width: 89% !important; border: 2px solid;"><div style=""><i class="fa-solid fa-tornado"></i></div><div style="font-size:100%;" translate="no">WEBTORRENT</div><div style="font-size:80%;">WebTorrent P2P Player (we don't provide torrent files)</div><div style="font-size:80%;">Developed with Gemini AI</div><div style="font-size:80%;" ><div style="display:inline">Utility</div> <div style="display:inline">|</div> <div style="display:inline">Multimedia</div></div></a><button id="webtorrentinfo" class="col-auto btn btn-sm btn-outline-info webtorrentinfo" style="vertical-align: top;"><div style=""><i class="fas fa-circle-info"></i></div><div style="font-size:100%;" translate="no"></div></button></div>
                                             </div>
                                         </li>
